syntax = "proto3";

package jobworkerp.runner;

// CommandArgs is a list of arguments for a CommandRunner.
message CommandArgs {
  repeated string args = 1;
}

